parser/cddl_parser.go
// Code generated from java-escape by ANTLR 4.11.1. DO NOT EDIT.

package parser // CDDL
import (
	"fmt"
	"strconv"
	"sync"

	"github.com/antlr/antlr4/runtime/Go/antlr/v4"
)

// Suppress unused import errors
var _ = fmt.Printf
var _ = strconv.Itoa
var _ = sync.Once{}

type CDDLParser struct {
	*antlr.BaseParser
}

var cddlParserStaticData struct {
	once                   sync.Once
	serializedATN          []int32
	literalNames           []string
	symbolicNames          []string
	ruleNames              []string
	predictionContextCache *antlr.PredictionContextCache
	atn                    *antlr.ATN
	decisionToDFA          []*antlr.DFA
}

func cddlParserInit() {
	staticData := &cddlParserStaticData
	staticData.literalNames = []string{
		"", "'='", "'/='", "'//='", "'<'", "','", "'>'", "'/'", "'('", "')'",
		"'{'", "'}'", "'['", "']'", "'~'", "'&'", "'#'", "'//'", "'^'", "'=>'",
		"':'",
	}
	staticData.symbolicNames = []string{
		"", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "",
		"", "", "", "", "TAG", "MAJOR", "RANGEOP", "CTLOP", "OCCUR", "VALUE",
		"ID", "S",
	}
	staticData.ruleNames = []string{
		"cddl", "rule", "typeRule", "groupRule", "assignType", "assignGroup",
		"genericParam", "genericArg", "type", "type1", "type2", "groups", "groupChoice",
		"groupEntry", "memberKey", "optComma",
	}
	staticData.predictionContextCache = antlr.NewPredictionContextCache()
	deserializer := antlr.NewATNDeserializer(nil)
	staticData.atn = deserializer.Deserialize(staticData.serializedATN)
	atn := staticData.atn
	staticData.decisionToDFA = make([]*antlr.DFA, len(atn.DecisionToState))
	decisionToDFA := staticData.decisionToDFA
	for index, state := range atn.DecisionToState {
		decisionToDFA[index] = antlr.NewDFA(state, index)
	}
}

// CDDLParserInit initializes any static state used to implement CDDLParser. By default the
// static state used to implement the parser is lazily initialized during the first call to
// NewCDDLParser(). You can call this function if you wish to initialize the static state ahead
// of time.
func CDDLParserInit() {
	staticData := &cddlParserStaticData
	staticData.once.Do(cddlParserInit)
}

// NewCDDLParser produces a new parser instance for the optional input antlr.TokenStream.
func NewCDDLParser(input antlr.TokenStream) *CDDLParser {
	CDDLParserInit()
	this := new(CDDLParser)
	this.BaseParser = antlr.NewBaseParser(input)
	staticData := &cddlParserStaticData
	this.Interpreter = antlr.NewParserATNSimulator(this, staticData.atn, staticData.decisionToDFA, staticData.predictionContextCache)
	this.RuleNames = staticData.ruleNames
	this.LiteralNames = staticData.literalNames
	this.SymbolicNames = staticData.symbolicNames
	this.GrammarFileName = "java-escape"

	return this
}

// CDDLParser tokens.
const (
	CDDLParserEOF     = antlr.TokenEOF
	CDDLParserT__0    = 1
	CDDLParserT__1    = 2
	CDDLParserT__2    = 3
	CDDLParserT__3    = 4
	CDDLParserT__4    = 5
	CDDLParserT__5    = 6
	CDDLParserT__6    = 7
	CDDLParserT__7    = 8
	CDDLParserT__8    = 9
	CDDLParserT__9    = 10
	CDDLParserT__10   = 11
	CDDLParserT__11   = 12
	CDDLParserT__12   = 13
	CDDLParserT__13   = 14
	CDDLParserT__14   = 15
	CDDLParserT__15   = 16
	CDDLParserT__16   = 17
	CDDLParserT__17   = 18
	CDDLParserT__18   = 19
	CDDLParserT__19   = 20
	CDDLParserTAG     = 21
	CDDLParserMAJOR   = 22
	CDDLParserRANGEOP = 23
	CDDLParserCTLOP   = 24
	CDDLParserOCCUR   = 25
	CDDLParserVALUE   = 26
	CDDLParserID      = 27
	CDDLParserS       = 28
)

// CDDLParser rules.
const (
	CDDLParserRULE_cddl         = 0
	CDDLParserRULE_rule         = 1
	CDDLParserRULE_typeRule     = 2
	CDDLParserRULE_groupRule    = 3
	CDDLParserRULE_assignType   = 4
	CDDLParserRULE_assignGroup  = 5
	CDDLParserRULE_genericParam = 6
	CDDLParserRULE_genericArg   = 7
	CDDLParserRULE_type         = 8
	CDDLParserRULE_type1        = 9
	CDDLParserRULE_type2        = 10
	CDDLParserRULE_groups       = 11
	CDDLParserRULE_groupChoice  = 12
	CDDLParserRULE_groupEntry   = 13
	CDDLParserRULE_memberKey    = 14
	CDDLParserRULE_optComma     = 15
)

// ICddlContext is an interface to support dynamic dispatch.
type ICddlContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// IsCddlContext differentiates from other interfaces.
	IsCddlContext()
}

type CddlContext struct {
	*antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyCddlContext() *CddlContext {
	var p = new(CddlContext)
	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(nil, -1)
	p.RuleIndex = CDDLParserRULE_cddl
	return p
}

func (*CddlContext) IsCddlContext() {}

func NewCddlContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *CddlContext {
	var p = new(CddlContext)

	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(parent, invokingState)

	p.parser = parser
	p.RuleIndex = CDDLParserRULE_cddl

	return p
}

func (s *CddlContext) GetParser() antlr.Parser { return s.parser }

func (s *CddlContext) EOF() antlr.TerminalNode {
	return s.GetToken(CDDLParserEOF, 0)
}

func (s *CddlContext) AllS() []antlr.TerminalNode {
	return s.GetTokens(CDDLParserS)
}

func (s *CddlContext) S(i int) antlr.TerminalNode {
	return s.GetToken(CDDLParserS, i)
}

func (s *CddlContext) AllRule_() []IRuleContext {
	children := s.GetChildren()
	len := 0
	for _, ctx := range children {
		if _, ok := ctx.(IRuleContext); ok {
			len++
		}
	}

	tst := make([]IRuleContext, len)
	i := 0
	for _, ctx := range children {
		if t, ok := ctx.(IRuleContext); ok {
			tst[i] = t.(IRuleContext)
			i++
		}
	}

	return tst
}

func (s *CddlContext) Rule_(i int) IRuleContext {
	var t antlr.RuleContext
	j := 0
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IRuleContext); ok {
			if j == i {
				t = ctx.(antlr.RuleContext)
				break
			}
			j++
		}
	}

	if t == nil {
		return nil
	}

	return t.(IRuleContext)
}

func (s *CddlContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *CddlContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

func (p *CDDLParser) Cddl() (localctx ICddlContext) {
	this := p
	_ = this

	localctx = NewCddlContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 0, CDDLParserRULE_cddl)
	var _la int

	defer func() {
		p.ExitRule()
	}()

	defer func() {
		if err := recover(); err != nil {
			if v, ok := err.(antlr.RecognitionException); ok {
				localctx.SetException(v)
				p.GetErrorHandler().ReportError(p, v)
				p.GetErrorHandler().Recover(p, v)
			} else {
				panic(err)
			}
		}
	}()

	p.EnterOuterAlt(localctx, 1)
	p.SetState(33)
	p.GetErrorHandler().Sync(p)
	_la = p.GetTokenStream().LA(1)

	if _la == CDDLParserS {
		{
			p.SetState(32)
			p.Match(CDDLParserS)
		}

	}
	p.SetState(39)
	p.GetErrorHandler().Sync(p)
	_la = p.GetTokenStream().LA(1)

	for ok := true; ok; ok = _la == CDDLParserID {
		{
			p.SetState(35)
			p.Rule_()
		}
		p.SetState(37)
		p.GetErrorHandler().Sync(p)

		if p.GetInterpreter().AdaptivePredict(p.GetTokenStream(), 1, p.GetParserRuleContext()) == 1 {
			{
				p.SetState(36)
				p.Match(CDDLParserS)
			}

		}

		p.SetState(41)
		p.GetErrorHandler().Sync(p)
		_la = p.GetTokenStream().LA(1)
	}
	p.SetState(44)
	p.GetErrorHandler().Sync(p)
	_la = p.GetTokenStream().LA(1)

	if _la == CDDLParserS {
		{
			p.SetState(43)
			p.Match(CDDLParserS)
		}

	}
	{
		p.SetState(46)
		p.Match(CDDLParserEOF)
	}

	return localctx
}

// IRuleContext is an interface to support dynamic dispatch.
type IRuleContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// IsRuleContext differentiates from other interfaces.
	IsRuleContext()
}

type RuleContext struct {
	*antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyRuleContext() *RuleContext {
	var p = new(RuleContext)
	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(nil, -1)
	p.RuleIndex = CDDLParserRULE_rule
	return p
}

func (*RuleContext) IsRuleContext() {}

func NewRuleContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *RuleContext {
	var p = new(RuleContext)

	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(parent, invokingState)

	p.parser = parser
	p.RuleIndex = CDDLParserRULE_rule

	return p
}

func (s *RuleContext) GetParser() antlr.Parser { return s.parser }

func (s *RuleContext) TypeRule() ITypeRuleContext {
	var t antlr.RuleContext
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(ITypeRuleContext); ok {
			t = ctx.(antlr.RuleContext)
			break
		}
	}

	if t == nil {
		return nil
	}

	return t.(ITypeRuleContext)
}

func (s *RuleContext) GroupRule() IGroupRuleContext {
	var t antlr.RuleContext
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IGroupRuleContext); ok {
			t = ctx.(antlr.RuleContext)
			break
		}
	}

	if t == nil {
		return nil
	}

	return t.(IGroupRuleContext)
}

func (s *RuleContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *RuleContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

func (p *CDDLParser) Rule_() (localctx IRuleContext) {
	this := p
	_ = this

	localctx = NewRuleContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 2, CDDLParserRULE_rule)

	defer func() {
		p.ExitRule()
	}()

	defer func() {
		if err := recover(); err != nil {
			if v, ok := err.(antlr.RecognitionException); ok {
				localctx.SetException(v)
				p.GetErrorHandler().ReportError(p, v)
				p.GetErrorHandler().Recover(p, v)
			} else {
				panic(err)
			}
		}
	}()

	p.SetState(50)
	p.GetErrorHandler().Sync(p)
	switch p.GetInterpreter().AdaptivePredict(p.GetTokenStream(), 4, p.GetParserRuleContext()) {
	case 1:
		p.EnterOuterAlt(localctx, 1)
		{
			p.SetState(48)
			p.TypeRule()
		}

	case 2:
		p.EnterOuterAlt(localctx, 2)
		{
			p.SetState(49)
			p.GroupRule()
		}

	}

	return localctx
}

// ITypeRuleContext is an interface to support dynamic dispatch.
type ITypeRuleContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// IsTypeRuleContext differentiates from other interfaces.
	IsTypeRuleContext()
}

type TypeRuleContext struct {
	*antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyTypeRuleContext() *TypeRuleContext {
	var p = new(TypeRuleContext)
	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(nil, -1)
	p.RuleIndex = CDDLParserRULE_typeRule
	return p
}

func (*TypeRuleContext) IsTypeRuleContext() {}

func NewTypeRuleContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *TypeRuleContext {
	var p = new(TypeRuleContext)

	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(parent, invokingState)

	p.parser = parser
	p.RuleIndex = CDDLParserRULE_typeRule

	return p
}

func (s *TypeRuleContext) GetParser() antlr.Parser { return s.parser }

func (s *TypeRuleContext) ID() antlr.TerminalNode {
	return s.GetToken(CDDLParserID, 0)
}

func (s *TypeRuleContext) AssignType() IAssignTypeContext {
	var t antlr.RuleContext
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IAssignTypeContext); ok {
			t = ctx.(antlr.RuleContext)
			break
		}
	}

	if t == nil {
		return nil
	}

	return t.(IAssignTypeContext)
}

func (s *TypeRuleContext) Type_() ITypeContext {
	var t antlr.RuleContext
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(ITypeContext); ok {
			t = ctx.(antlr.RuleContext)
			break
		}
	}

	if t == nil {
		return nil
	}

	return t.(ITypeContext)
}

func (s *TypeRuleContext) GenericParam() IGenericParamContext {
	var t antlr.RuleContext
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IGenericParamContext); ok {
			t = ctx.(antlr.RuleContext)
			break
		}
	}

	if t == nil {
		return nil
	}

	return t.(IGenericParamContext)
}

func (s *TypeRuleContext) AllS() []antlr.TerminalNode {
	return s.GetTokens(CDDLParserS)
}

func (s *TypeRuleContext) S(i int) antlr.TerminalNode {
	return s.GetToken(CDDLParserS, i)
}

func (s *TypeRuleContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *TypeRuleContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

func (p *CDDLParser) TypeRule() (localctx ITypeRuleContext) {
	this := p
	_ = this

	localctx = NewTypeRuleContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 4, CDDLParserRULE_typeRule)
	var _la int

	defer func() {
		p.ExitRule()
	}()

	defer func() {
		if err := recover(); err != nil {
			if v, ok := err.(antlr.RecognitionException); ok {
				localctx.SetException(v)
				p.GetErrorHandler().ReportError(p, v)
				p.GetErrorHandler().Recover(p, v)
			} else {
				panic(err)
			}
		}
	}()

	p.EnterOuterAlt(localctx, 1)
	{
		p.SetState(52)
		p.Match(CDDLParserID)
	}
	p.SetState(54)
	p.GetErrorHandler().Sync(p)
	_la = p.GetTokenStream().LA(1)

	if _la == CDDLParserT__3 {
		{
			p.SetState(53)
			p.GenericParam()
		}

	}
	p.SetState(57)
	p.GetErrorHandler().Sync(p)
	_la = p.GetTokenStream().LA(1)

	if _la == CDDLParserS {
		{
			p.SetState(56)
			p.Match(CDDLParserS)
		}

	}
	{
		p.SetState(59)
		p.AssignType()
	}
	p.SetState(61)
	p.GetErrorHandler().Sync(p)
	_la = p.GetTokenStream().LA(1)

	if _la == CDDLParserS {
		{
			p.SetState(60)
			p.Match(CDDLParserS)
		}

	}
	{
		p.SetState(63)
		p.Type_()
	}

	return localctx
}

// IGroupRuleContext is an interface to support dynamic dispatch.
type IGroupRuleContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// IsGroupRuleContext differentiates from other interfaces.
	IsGroupRuleContext()
}

type GroupRuleContext struct {
	*antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyGroupRuleContext() *GroupRuleContext {
	var p = new(GroupRuleContext)
	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(nil, -1)
	p.RuleIndex = CDDLParserRULE_groupRule
	return p
}

func (*GroupRuleContext) IsGroupRuleContext() {}

func NewGroupRuleContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *GroupRuleContext {
	var p = new(GroupRuleContext)

	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(parent, invokingState)

	p.parser = parser
	p.RuleIndex = CDDLParserRULE_groupRule

	return p
}

func (s *GroupRuleContext) GetParser() antlr.Parser { return s.parser }

func (s *GroupRuleContext) ID() antlr.TerminalNode {
	return s.GetToken(CDDLParserID, 0)
}

func (s *GroupRuleContext) AssignGroup() IAssignGroupContext {
	var t antlr.RuleContext
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IAssignGroupContext); ok {
			t = ctx.(antlr.RuleContext)
			break
		}
	}

	if t == nil {
		return nil
	}

	return t.(IAssignGroupContext)
}

func (s *GroupRuleContext) GroupEntry() IGroupEntryContext {
	var t antlr.RuleContext
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IGroupEntryContext); ok {
			t = ctx.(antlr.RuleContext)
			break
		}
	}

	if t == nil {
		return nil
	}

	return t.(IGroupEntryContext)
}

func (s *GroupRuleContext) GenericParam() IGenericParamContext {
	var t antlr.RuleContext
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IGenericParamContext); ok {
			t = ctx.(antlr.RuleContext)
			break
		}
	}

	if t == nil {
		return nil
	}

	return t.(IGenericParamContext)
}

func (s *GroupRuleContext) AllS() []antlr.TerminalNode {
	return s.GetTokens(CDDLParserS)
}

func (s *GroupRuleContext) S(i int) antlr.TerminalNode {
	return s.GetToken(CDDLParserS, i)
}

func (s *GroupRuleContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *GroupRuleContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

func (p *CDDLParser) GroupRule() (localctx IGroupRuleContext) {
	this := p
	_ = this

	localctx = NewGroupRuleContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 6, CDDLParserRULE_groupRule)
	var _la int

	defer func() {
		p.ExitRule()
	}()

	defer func() {
		if err := recover(); err != nil {
			if v, ok := err.(antlr.RecognitionException); ok {
				localctx.SetException(v)
				p.GetErrorHandler().ReportError(p, v)
				p.GetErrorHandler().Recover(p, v)
			} else {
				panic(err)
			}
		}
	}()

	p.EnterOuterAlt(localctx, 1)
	{
		p.SetState(65)
		p.Match(CDDLParserID)
	}
	p.SetState(67)
	p.GetErrorHandler().Sync(p)
	_la = p.GetTokenStream().LA(1)

	if _la == CDDLParserT__3 {
		{
			p.SetState(66)
			p.GenericParam()
		}

	}
	p.SetState(70)
	p.GetErrorHandler().Sync(p)
	_la = p.GetTokenStream().LA(1)

	if _la == CDDLParserS {
		{
			p.SetState(69)
			p.Match(CDDLParserS)
		}

	}
	{
		p.SetState(72)
		p.AssignGroup()
	}
	p.SetState(74)
	p.GetErrorHandler().Sync(p)

	if p.GetInterpreter().AdaptivePredict(p.GetTokenStream(), 10, p.GetParserRuleContext()) == 1 {
		{
			p.SetState(73)
			p.Match(CDDLParserS)
		}

	}
	{
		p.SetState(76)
		p.GroupEntry()
	}

	return localctx
}

// IAssignTypeContext is an interface to support dynamic dispatch.
type IAssignTypeContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// IsAssignTypeContext differentiates from other interfaces.
	IsAssignTypeContext()
}

type AssignTypeContext struct {
	*antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyAssignTypeContext() *AssignTypeContext {
	var p = new(AssignTypeContext)
	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(nil, -1)
	p.RuleIndex = CDDLParserRULE_assignType
	return p
}

func (*AssignTypeContext) IsAssignTypeContext() {}

func NewAssignTypeContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *AssignTypeContext {
	var p = new(AssignTypeContext)

	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(parent, invokingState)

	p.parser = parser
	p.RuleIndex = CDDLParserRULE_assignType

	return p
}

func (s *AssignTypeContext) GetParser() antlr.Parser { return s.parser }
func (s *AssignTypeContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *AssignTypeContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

func (p *CDDLParser) AssignType() (localctx IAssignTypeContext) {
	this := p
	_ = this

	localctx = NewAssignTypeContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 8, CDDLParserRULE_assignType)
	var _la int

	defer func() {
		p.ExitRule()
	}()

	defer func() {
		if err := recover(); err != nil {
			if v, ok := err.(antlr.RecognitionException); ok {
				localctx.SetException(v)
				p.GetErrorHandler().ReportError(p, v)
				p.GetErrorHandler().Recover(p, v)
			} else {
				panic(err)
			}
		}
	}()

	p.EnterOuterAlt(localctx, 1)
	{
		p.SetState(78)
		_la = p.GetTokenStream().LA(1)

		if !(_la == CDDLParserT__0 || _la == CDDLParserT__1) {
			p.GetErrorHandler().RecoverInline(p)
		} else {
			p.GetErrorHandler().ReportMatch(p)
			p.Consume()
		}
	}

	return localctx
}

// IAssignGroupContext is an interface to support dynamic dispatch.
type IAssignGroupContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// IsAssignGroupContext differentiates from other interfaces.
	IsAssignGroupContext()
}

type AssignGroupContext struct {
	*antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyAssignGroupContext() *AssignGroupContext {
	var p = new(AssignGroupContext)
	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(nil, -1)
	p.RuleIndex = CDDLParserRULE_assignGroup
	return p
}

func (*AssignGroupContext) IsAssignGroupContext() {}

func NewAssignGroupContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *AssignGroupContext {
	var p = new(AssignGroupContext)

	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(parent, invokingState)

	p.parser = parser
	p.RuleIndex = CDDLParserRULE_assignGroup

	return p
}

func (s *AssignGroupContext) GetParser() antlr.Parser { return s.parser }
func (s *AssignGroupContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *AssignGroupContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

func (p *CDDLParser) AssignGroup() (localctx IAssignGroupContext) {
	this := p
	_ = this

	localctx = NewAssignGroupContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 10, CDDLParserRULE_assignGroup)
	var _la int

	defer func() {
		p.ExitRule()
	}()

	defer func() {
		if err := recover(); err != nil {
			if v, ok := err.(antlr.RecognitionException); ok {
				localctx.SetException(v)
				p.GetErrorHandler().ReportError(p, v)
				p.GetErrorHandler().Recover(p, v)
			} else {
				panic(err)
			}
		}
	}()

	p.EnterOuterAlt(localctx, 1)
	{
		p.SetState(80)
		_la = p.GetTokenStream().LA(1)

		if !(_la == CDDLParserT__0 || _la == CDDLParserT__2) {
			p.GetErrorHandler().RecoverInline(p)
		} else {
			p.GetErrorHandler().ReportMatch(p)
			p.Consume()
		}
	}

	return localctx
}

// IGenericParamContext is an interface to support dynamic dispatch.
type IGenericParamContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// IsGenericParamContext differentiates from other interfaces.
	IsGenericParamContext()
}

type GenericParamContext struct {
	*antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyGenericParamContext() *GenericParamContext {
	var p = new(GenericParamContext)
	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(nil, -1)
	p.RuleIndex = CDDLParserRULE_genericParam
	return p
}

func (*GenericParamContext) IsGenericParamContext() {}

func NewGenericParamContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *GenericParamContext {
	var p = new(GenericParamContext)

	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(parent, invokingState)

	p.parser = parser
	p.RuleIndex = CDDLParserRULE_genericParam

	return p
}

func (s *GenericParamContext) GetParser() antlr.Parser { return s.parser }

func (s *GenericParamContext) AllID() []antlr.TerminalNode {
	return s.GetTokens(CDDLParserID)
}

func (s *GenericParamContext) ID(i int) antlr.TerminalNode {
	return s.GetToken(CDDLParserID, i)
}

func (s *GenericParamContext) AllS() []antlr.TerminalNode {
	return s.GetTokens(CDDLParserS)
}

func (s *GenericParamContext) S(i int) antlr.TerminalNode {
	return s.GetToken(CDDLParserS, i)
}

func (s *GenericParamContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *GenericParamContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

func (p *CDDLParser) GenericParam() (localctx IGenericParamContext) {
	this := p
	_ = this

	localctx = NewGenericParamContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 12, CDDLParserRULE_genericParam)
	var _la int

	defer func() {
		p.ExitRule()
	}()

	defer func() {
		if err := recover(); err != nil {
			if v, ok := err.(antlr.RecognitionException); ok {
				localctx.SetException(v)
				p.GetErrorHandler().ReportError(p, v)
				p.GetErrorHandler().Recover(p, v)
			} else {
				panic(err)
			}
		}
	}()

	p.EnterOuterAlt(localctx, 1)
	{
		p.SetState(82)
		p.Match(CDDLParserT__3)
	}
	p.SetState(84)
	p.GetErrorHandler().Sync(p)
	_la = p.GetTokenStream().LA(1)

	if _la == CDDLParserS {
		{
			p.SetState(83)
			p.Match(CDDLParserS)
		}

	}
	{
		p.SetState(86)
		p.Match(CDDLParserID)
	}
	p.SetState(88)
	p.GetErrorHandler().Sync(p)
	_la = p.GetTokenStream().LA(1)

	if _la == CDDLParserS {
		{
			p.SetState(87)
			p.Match(CDDLParserS)
		}

	}
	p.SetState(100)
	p.GetErrorHandler().Sync(p)
	_la = p.GetTokenStream().LA(1)

	for _la == CDDLParserT__4 {
		{
			p.SetState(90)
			p.Match(CDDLParserT__4)
		}
		p.SetState(92)
		p.GetErrorHandler().Sync(p)
		_la = p.GetTokenStream().LA(1)

		if _la == CDDLParserS {
			{
				p.SetState(91)
				p.Match(CDDLParserS)
			}

		}
		{
			p.SetState(94)
			p.Match(CDDLParserID)
		}
		p.SetState(96)
		p.GetErrorHandler().Sync(p)
		_la = p.GetTokenStream().LA(1)

		if _la == CDDLParserS {
			{
				p.SetState(95)
				p.Match(CDDLParserS)
			}

		}

		p.SetState(102)
		p.GetErrorHandler().Sync(p)
		_la = p.GetTokenStream().LA(1)
	}
	{
		p.SetState(103)
		p.Match(CDDLParserT__5)
	}

	return localctx
}

// IGenericArgContext is an interface to support dynamic dispatch.
type IGenericArgContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// IsGenericArgContext differentiates from other interfaces.
	IsGenericArgContext()
}

type GenericArgContext struct {
	*antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyGenericArgContext() *GenericArgContext {
	var p = new(GenericArgContext)
	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(nil, -1)
	p.RuleIndex = CDDLParserRULE_genericArg
	return p
}
